# nhanes-hdbscan-phenotyping

./: .gitignore  .zenodo.json  CHANGELOG.md  CITATION.cff  LICENSE  Makefile  README.md  RELEASE_NOTES_v0.1.0.md  RELEASE_NOTES_v1.0.0-preprint.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
configs/: discovery.yaml  fast_test.yaml  replication.yaml
docs/: analysis_inventory.md  data_availability.md  known_limitations.md  leakage_control.md  methods_overview.md  portfolio_results_summary.md  preprint_status.md  repository_release_checklist.md  reproducibility.md  results_audit.md
manuscript/: results_scaffold.md
metadata/: abstract_for_medrxiv_form.txt  medrxiv_form_answers_ready.txt
results/summary/: NHANES_HDBSCAN_RESULTS_FOR_CHATGPT_v2_PLUS.json  NHANES_HDBSCAN_RESULTS_FOR_CHATGPT_v2_PLUS.md  technical_summary.md
scripts/: make_portfolio_report.py  make_research_report.py  run_discovery.py  run_replication.py  verify_preprint_release.py
src/nhanes_hdbscan/: __init__.py  ablations.py  clustering.py  config.py  data_cleaning.py  data_download.py  embedding.py  enrichment.py  features.py  paths.py  preprocessing.py  replication.py  reporting.py  results.py  stability.py  visualization.py
tables/: ablation_summary.csv  disease_enrichment.csv  final_seed_runs.csv  phenotype_profiles.csv  replication_matches.csv
tables/curated/: table1_final_phenotype_groups_curated.csv  table2_selected_posthoc_enrichment_curated.csv  table3_model_stability_audit_curated.csv
tests/: test_core_utilities.py  test_imports.py  test_results_parser.py
