[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nhanes-hdbscan-phenotyping"
version = "0.1.0"
description = "Reproducible NHANES cardiometabolic phenotyping using SVD, UMAP, HDBSCAN, stability analysis, ablations, and replication."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "KrishnaSaiPokala" }]
license = { text = "MIT" }
keywords = ["NHANES", "HDBSCAN", "UMAP", "phenotyping", "public health", "machine learning"]
dependencies = [
    "numpy>=1.23",
    "pandas>=1.5",
    "matplotlib>=3.7",
    "scikit-learn>=1.3",
    "scipy>=1.10",
]

[project.optional-dependencies]
dev = ["pytest>=7", "ruff>=0.4", "black>=24"]
full = ["umap-learn>=0.5", "hdbscan>=0.8", "statsmodels>=0.14", "pyyaml>=6"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.black]
target-version = ['py310']
line-length = 100

[tool.ruff]
line-length = 100
src = ["src", "scripts", "tests"]

[tool.ruff.lint.per-file-ignores]
"scripts/*.py" = ["E402"]
